<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:text="@string/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/text_author"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:text="@string/authors_name_surname"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:padding="16dp">

        <!-- Nagłówki kolumn -->
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/option"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choice"
                android:textStyle="bold" />
        </TableRow>

        <!-- Typ Czcionki -->
        <TableRow>

            <!--            <RadioGroup-->
            <!--                android:id="@+id/radioGroupFontType"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="1"-->
            <!--                android:orientation="horizontal">-->

            <!--                <RadioButton-->
            <!--                    android:id="@+id/radioButtonType1"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:text="Typ 1"/>-->

            <!--                <RadioButton-->
            <!--                    android:id="@+id/radioButtonType2"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:text="Typ 2"/>-->

            <!--                <RadioButton-->
            <!--                    android:id="@+id/radioButtonType3"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:text="Typ 3"/>-->
            <!--            </RadioGroup>-->

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="3.5"
                android:text="@string/font_type" />

            <CheckBox
                android:id="@+id/radioButtonType1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/italic" />

            <CheckBox
                android:id="@+id/radioButtonType2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bold" />

            <CheckBox
                android:id="@+id/radioButtonType3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/serif" />

        </TableRow>

        <!-- Kolor Czcionki -->
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/font_color" />

            <RadioGroup
                android:id="@+id/radioGroupFontColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonColorRed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="fill"
                    android:text="@string/red" />

                <RadioButton
                    android:id="@+id/radioButtonColorGreen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/green" />

                <RadioButton
                    android:id="@+id/radioButtonColorBlack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stock" />
            </RadioGroup>
        </TableRow>

        <!-- Rozmiar Czcionki -->
        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/font_size" />

            <RadioGroup
                android:id="@+id/radioGroupFontSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonSizeSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/small" />

                <RadioButton
                    android:id="@+id/radioButtonSizeMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/normal" />

                <RadioButton
                    android:id="@+id/radioButtonSizeLarge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/large" />
            </RadioGroup>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button_day"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/day_mode"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/button_night"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/night_mode"
        android:layout_marginBottom="16dp"/>
</LinearLayout>